# eia-python

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
client/: base_source.py  client.py  helpers.py
client/source/: coal.py  electricity.py  natural_gas.py  oil.py  renewables.py
src/eia_ng/: client.py  exceptions.py  helpers.py
src/eia_ng/datasets/: natural_gas_series.py
src/eia_ng/sources/: base.py  electricity.py  natural_gas.py
src/eia_python/: __init__.py  base_source.py  client.py
src/eia_python/sources/: __init__.py  natural_gas.py
tests/: test_electricity.py  test_natural_gas.py  test_smoke_all_functions.py
