[tool.poetry]
name = "eia-ng"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"
packages = [{ include = "eia_ng", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
